# DH2323-raytracer

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  OpenCL.hpp  cl_manager.cpp  cl_manager.hpp  getInfo.cpp  getInfo.hpp  io.cpp  io.hpp  main.cpp  main.hpp  scene_manager.cpp  scene_manager.hpp  structs.hpp
include/: BBox.hpp  KdArray.hpp  Kdtree.hpp  SDL_helper.hpp  Triangle.hpp  main.hpp  scene_manager.hpp  structs.hpp
kernels/: increment.cl  interpolate.cl  raytrace.cl  structs.cl
labs/: SDLauxiliary.h  TestModel.h  raytracer.cpp  raytracer.h
math/: Matrix4f.clh
models/: convert.py  dragon-smallest
old_versions/OpenCL-setup/: CMakeLists.txt  cl_manager.cpp  cl_manager.hpp  main.cpp  testKernel.cl
old_versions/raytracing-kd/: BBox.cpp  BBox.hpp  CMakeLists.txt  Kdtree.cpp  Kdtree.hpp  Triangle.cpp  Triangle.hpp  main.cpp  main.hpp  model.hpp  raytracer.cpp  raytracer.hpp  structs.hpp
old_versions/raytracing-kd/SDLwithGLM/SDLwithGLM/: Info.plist
old_versions/raytracing-kd/SDLwithGLM/SDLwithGLM.xcodeproj/: project.pbxproj
old_versions/raytracing-kd/SDLwithGLM/SDLwithGLM.xcodeproj/project.xcworkspace/xcuserdata/Porya.xcuserdatad/: UserInterfaceState.xcuserstate
old_versions/raytracing-kd/SDLwithGLM/SDLwithGLM.xcodeproj/xcuserdata/Porya.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
old_versions/raytracing-kd/SDLwithGLM/SDLwithGLM.xcodeproj/xcuserdata/Porya.xcuserdatad/xcschemes/: xcschememanagement.plist
old_versions/raytracing-kd/SDLwithGLM/SDLwithGLM/Supporting Files/: BBox.hpp  Kdtree.hpp  TestModel.h  skeleton.cpp
report/: report.tex
specification/: data.txt  (+1 more)
src/: BBox.cpp  (+6 more)
(+24 files in other folders)
